--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -120,6 +120,7 @@ OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring.INT
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/Wiring/W_Wiring.W_Wiring
 OpenAssetsAtExit=/Game/ThirdPerson/Menus/W_Menu.W_Menu
 OpenAssetsAtExit=/Game/ThirdPerson/Menus/W_Inventory.W_Inventory
+OpenAssetsAtExit=/Game/ThirdPerson/Input/IMC_Default.IMC_Default
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -2219,8 +2220,8 @@ INT_TextBased_C="\"Object.Default.PhaseItemID\" \"Object.Dialogue.Phase Dialogue
 None=======
 None=======
 None=======
-InputMappingContext=
-DataAsset=
+InputMappingContext="\"Object.Mappings.Mappings.Mappings[20].Modifiers\" \"Object.Mappings.Mappings.Mappings[22]\" \"Object.Mappings.Mappings.Mappings[22].Modifiers\" \"Object.Mappings.Mappings.Mappings[23]\" "
+DataAsset="\"Object.Mappings.Mappings.Mappings[20].Modifiers\" \"Object.Mappings.Mappings.Mappings[22]\" \"Object.Mappings.Mappings.Mappings[22].Modifiers\" \"Object.Mappings.Mappings.Mappings[23]\" "
 Button=
 ContentWidget=
 PanelWidget=
@@ -3422,7 +3423,7 @@ K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_Variab
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,
 CapsuleComponent=
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,
-SceneComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.ImageContainers,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,
+SceneComponent=
 BP_ThirdPersonGameMode_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,
 INT_TextBased_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,
 INT_TextBased_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,
@@ -3569,26 +3570,26 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Menus/W_Inventory
-MRUItem1=/Game/ThirdPerson/Menus/W_Menu
-MRUItem2=/Game/ThirdPerson/Blueprints/Interactives/Wiring/W_Wiring
-MRUItem3=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring
-MRUItem4=/Game/ThirdPerson/Widgets/TextUI
-MRUItem5=/Game/ThirdPerson/Blueprints/Interactives/Keypad/INT_Keypad
-MRUItem6=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem8=/Game/ThirdPerson/Blueprints/BP_GameManager
-MRUItem9=/Game/ConveyorBelt/BP_ConveyorBelt
-MRUItem10=/Game/ConveyorBelt/BP_Box
-MRUItem11=/Game/ConveyorBelt/W_ConveyorBelt
-MRUItem12=/Game/ConveyorBelt/BP_Gate
-MRUItem13=/Game/ThirdPerson/Blueprints/HUD/W_HUD
-MRUItem14=/Game/ThirdPerson/PostProcess/FadeSquence
-MRUItem15=/Game/ThirdPerson/ImageTextures/ItemImages/Papers/Puzzle_Full
-MRUItem16=/Game/ThirdPerson/Blueprints/Interactives/Keypad/W_Keypad
-MRUItem17=/Game/UIElements/Menus/Wire_Cutters__text_png
-MRUItem18=/Game/ThirdPerson/Interfaces/IF_Inventory
-MRUItem19=/Game/UIElements/Menus/Kieth’s_ID_text_
+MRUItem0=/Game/ThirdPerson/Input/IMC_Default
+MRUItem1=/Game/ThirdPerson/Menus/W_Inventory
+MRUItem2=/Game/ThirdPerson/Menus/W_Menu
+MRUItem3=/Game/ThirdPerson/Blueprints/Interactives/Wiring/W_Wiring
+MRUItem4=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring
+MRUItem5=/Game/ThirdPerson/Widgets/TextUI
+MRUItem6=/Game/ThirdPerson/Blueprints/Interactives/Keypad/INT_Keypad
+MRUItem7=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem9=/Game/ThirdPerson/Blueprints/BP_GameManager
+MRUItem10=/Game/ConveyorBelt/BP_ConveyorBelt
+MRUItem11=/Game/ConveyorBelt/BP_Box
+MRUItem12=/Game/ConveyorBelt/W_ConveyorBelt
+MRUItem13=/Game/ConveyorBelt/BP_Gate
+MRUItem14=/Game/ThirdPerson/Blueprints/HUD/W_HUD
+MRUItem15=/Game/ThirdPerson/PostProcess/FadeSquence
+MRUItem16=/Game/ThirdPerson/ImageTextures/ItemImages/Papers/Puzzle_Full
+MRUItem17=/Game/ThirdPerson/Blueprints/Interactives/Keypad/W_Keypad
+MRUItem18=/Game/UIElements/Menus/Wire_Cutters__text_png
+MRUItem19=/Game/ThirdPerson/Interfaces/IF_Inventory
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
