--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -116,6 +116,7 @@ OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPe
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased.INT_TextBased
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/Keypad/INT_Keypad.INT_Keypad
 OpenAssetsAtExit=/Game/ThirdPerson/Widgets/TextUI.TextUI
+OpenAssetsAtExit=/Game/ThirdPerson/ImageTextures/SpeakerFaces/WallDecor/M_Poster1.M_Poster1
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -2212,7 +2213,7 @@ Visual=
 OBJ_Keypad_C="\"Object.Default.InteractText\" "
 INT_Keypad_C=
 INT_TextBased_C=
-INT_TextBased_C="\"Object.Default.PhaseItemID\" \"Object.Default.PhaseItemID.PhaseItemID_Value[0]\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[0]\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[5]\" \"Object.PRogression.CutsceneTrigger\" \"Object.PRogression.ObjectiveTriggers\" "
+INT_TextBased_C="\"Object.Default.PhaseItemID\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[0]\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[5]\" \"Object.PRogression.CutsceneTrigger\" \"Object.PRogression.ObjectiveTriggers\" "
 None=======
 None=======
 None=======
@@ -3459,7 +3460,7 @@ ExponentialHeightFog=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_Vari
 EdGraph=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.5A2D76044AB73ABF2253C7BD2DF8D08C,PropertyWrapper.DefaultValueCategory.CameraMap,
 UserDefinedStruct=UserDefinedStruct.Structure.3C10F4674E7F99FF59973AA732FE46FC,
-S_ItemReference=UserDefinedStruct.Structure.3C10F4674E7F99FF59973AA732FE46FC,
+S_ItemReference=
 K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.ImageContainers,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,
 AddToInventory=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,
@@ -3567,26 +3568,26 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Menus/S_ItemReference
-MRUItem1=/Game/ThirdPerson/Input/IMC_Default
-MRUItem2=/Game/ThirdPerson/Menus/W_Inventory
-MRUItem3=/Game/ThirdPerson/Menus/W_Menu
-MRUItem4=/Game/ThirdPerson/Blueprints/Interactives/Wiring/W_Wiring
-MRUItem5=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring
-MRUItem6=/Game/ThirdPerson/Widgets/TextUI
-MRUItem7=/Game/ThirdPerson/Blueprints/Interactives/Keypad/INT_Keypad
-MRUItem8=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
-MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem10=/Game/ThirdPerson/Blueprints/BP_GameManager
-MRUItem11=/Game/ConveyorBelt/BP_ConveyorBelt
-MRUItem12=/Game/ConveyorBelt/BP_Box
-MRUItem13=/Game/ConveyorBelt/W_ConveyorBelt
-MRUItem14=/Game/ConveyorBelt/BP_Gate
-MRUItem15=/Game/ThirdPerson/Blueprints/HUD/W_HUD
-MRUItem16=/Game/ThirdPerson/PostProcess/FadeSquence
-MRUItem17=/Game/ThirdPerson/ImageTextures/ItemImages/Papers/Puzzle_Full
-MRUItem18=/Game/ThirdPerson/Blueprints/Interactives/Keypad/W_Keypad
-MRUItem19=/Game/UIElements/Menus/Wire_Cutters__text_png
+MRUItem0=/Game/ThirdPerson/ImageTextures/SpeakerFaces/WallDecor/M_Poster1
+MRUItem1=/Game/ThirdPerson/Menus/S_ItemReference
+MRUItem2=/Game/ThirdPerson/Input/IMC_Default
+MRUItem3=/Game/ThirdPerson/Menus/W_Inventory
+MRUItem4=/Game/ThirdPerson/Menus/W_Menu
+MRUItem5=/Game/ThirdPerson/Blueprints/Interactives/Wiring/W_Wiring
+MRUItem6=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring
+MRUItem7=/Game/ThirdPerson/Widgets/TextUI
+MRUItem8=/Game/ThirdPerson/Blueprints/Interactives/Keypad/INT_Keypad
+MRUItem9=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
+MRUItem10=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem11=/Game/ThirdPerson/Blueprints/BP_GameManager
+MRUItem12=/Game/ConveyorBelt/BP_ConveyorBelt
+MRUItem13=/Game/ConveyorBelt/BP_Box
+MRUItem14=/Game/ConveyorBelt/W_ConveyorBelt
+MRUItem15=/Game/ConveyorBelt/BP_Gate
+MRUItem16=/Game/ThirdPerson/Blueprints/HUD/W_HUD
+MRUItem17=/Game/ThirdPerson/PostProcess/FadeSquence
+MRUItem18=/Game/ThirdPerson/ImageTextures/ItemImages/Papers/Puzzle_Full
+MRUItem19=/Game/ThirdPerson/Blueprints/Interactives/Keypad/W_Keypad
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
