--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -115,6 +115,7 @@ OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring.INT
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased.INT_TextBased
 OpenAssetsAtExit=/Game/ThirdPerson/Sounds/BP_SoundManager.BP_SoundManager
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/ThirdPerson/Widgets/TextUI.TextUI
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -2239,7 +2240,7 @@ Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Re
 OBJ_Keypad_C="\"Object.Default.InteractText\" "
 INT_Keypad_C=
 INT_TextBased_C=
-INT_TextBased_C="\"Object.PRogression.CutsceneTrigger\" \"Object.PRogression.ObjectiveTriggers\" \"Object.Actor.Tags\" "
+INT_TextBased_C="\"Object.Dialogue.Phase Dialogue\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[0]\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[0].Text_7_22AB65314FCF56A2B98769A50C6E4781\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[0].Speaker_22_43A8129F4A71D4BB4098E98DD99E5B3F\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[8]\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[8].Speaker_22_43A8129F4A71D4BB4098E98DD99E5B3F\" \"Object.PRogression.CutsceneTrigger\" \"Object.PRogression.ObjectiveTriggers\" \"Object.Actor.Tags\" "
 None=======
 None=======
 None=======
@@ -3451,7 +3452,7 @@ K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_Variab
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.MeshList,PropertyWrapper.DefaultValueCategory.TypeList,K2Node_FunctionEntry.Inputs.5A2D76044AB73ABF2253C7BD2DF8D08C,PropertyWrapper.DefaultValueCategory.MaterialList,PropertyWrapper.DefaultValueCategory.TypeIntList,PropertyWrapper.DefaultValueCategory.FragIntList,PropertyWrapper.DefaultValueCategory.DangIntList,PropertyWrapper.DefaultValueCategory.MeshIntList,
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.MeshList,PropertyWrapper.DefaultValueCategory.TypeList,K2Node_FunctionEntry.Inputs.5A2D76044AB73ABF2253C7BD2DF8D08C,PropertyWrapper.DefaultValueCategory.MaterialList,PropertyWrapper.DefaultValueCategory.TypeIntList,PropertyWrapper.DefaultValueCategory.FragIntList,PropertyWrapper.DefaultValueCategory.DangIntList,PropertyWrapper.DefaultValueCategory.MeshIntList,
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.MeshList,PropertyWrapper.DefaultValueCategory.TypeList,K2Node_FunctionEntry.Inputs.5A2D76044AB73ABF2253C7BD2DF8D08C,PropertyWrapper.DefaultValueCategory.MaterialList,PropertyWrapper.DefaultValueCategory.TypeIntList,PropertyWrapper.DefaultValueCategory.FragIntList,PropertyWrapper.DefaultValueCategory.DangIntList,PropertyWrapper.DefaultValueCategory.MeshIntList,
-SceneComponent=
+SceneComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.MeshList,PropertyWrapper.DefaultValueCategory.TypeList,K2Node_FunctionEntry.Inputs.5A2D76044AB73ABF2253C7BD2DF8D08C,PropertyWrapper.DefaultValueCategory.MaterialList,PropertyWrapper.DefaultValueCategory.TypeIntList,PropertyWrapper.DefaultValueCategory.FragIntList,PropertyWrapper.DefaultValueCategory.DangIntList,PropertyWrapper.DefaultValueCategory.MeshIntList,
 BP_ThirdPersonGameMode_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.MeshList,PropertyWrapper.DefaultValueCategory.TypeList,K2Node_FunctionEntry.Inputs.5A2D76044AB73ABF2253C7BD2DF8D08C,PropertyWrapper.DefaultValueCategory.MaterialList,PropertyWrapper.DefaultValueCategory.TypeIntList,PropertyWrapper.DefaultValueCategory.FragIntList,PropertyWrapper.DefaultValueCategory.DangIntList,PropertyWrapper.DefaultValueCategory.MeshIntList,
 INT_TextBased_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,
 INT_TextBased_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.MeshList,PropertyWrapper.DefaultValueCategory.TypeList,K2Node_FunctionEntry.Inputs.5A2D76044AB73ABF2253C7BD2DF8D08C,PropertyWrapper.DefaultValueCategory.MaterialList,PropertyWrapper.DefaultValueCategory.TypeIntList,PropertyWrapper.DefaultValueCategory.FragIntList,PropertyWrapper.DefaultValueCategory.DangIntList,PropertyWrapper.DefaultValueCategory.MeshIntList,
@@ -3608,26 +3609,26 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/ThirdPerson/Sounds/BP_SoundManager
-MRUItem2=/Game/ThirdPerson/Menus/W_Menu
-MRUItem3=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
-MRUItem4=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring
-MRUItem5=/Game/ThirdPerson/Blueprints/BP_GameManager
-MRUItem6=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem7=/Game/ThirdPerson/3D_Models/Meshs/PHU
-MRUItem8=/Game/ConveyorBelt/W_ConveyorBelt
-MRUItem9=/Game/ConveyorBelt/IF_Conveyor
-MRUItem10=/Game/ThirdPerson/Interfaces/IF_Dialogue
-MRUItem11=/Game/ConveyorBelt/BP_ConveyorBelt
-MRUItem12=/Game/ConveyorBelt/BP_ConveyorBelt1
-MRUItem13=/Game/ConveyorBelt/ParcelTextures/SP2/M_SP2
-MRUItem14=/Game/ConveyorBelt/ParcelTextures/SP1/M_SP1
-MRUItem15=/Game/ConveyorBelt/ParcelTextures/SL2/M_SL2
-MRUItem16=/Game/ConveyorBelt/ParcelTextures/SL1/M_SL1
-MRUItem17=/Game/ConveyorBelt/ParcelTextures/LP3/M_LP3
-MRUItem18=/Game/ConveyorBelt/ParcelTextures/LP2/M_LP2
-MRUItem19=/Game/ConveyorBelt/ParcelTextures/LP1/M_LP1
+MRUItem0=/Game/ThirdPerson/Widgets/TextUI
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem2=/Game/ThirdPerson/Sounds/BP_SoundManager
+MRUItem3=/Game/ThirdPerson/Menus/W_Menu
+MRUItem4=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
+MRUItem5=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring
+MRUItem6=/Game/ThirdPerson/Blueprints/BP_GameManager
+MRUItem7=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem8=/Game/ThirdPerson/3D_Models/Meshs/PHU
+MRUItem9=/Game/ConveyorBelt/W_ConveyorBelt
+MRUItem10=/Game/ConveyorBelt/IF_Conveyor
+MRUItem11=/Game/ThirdPerson/Interfaces/IF_Dialogue
+MRUItem12=/Game/ConveyorBelt/BP_ConveyorBelt
+MRUItem13=/Game/ConveyorBelt/BP_ConveyorBelt1
+MRUItem14=/Game/ConveyorBelt/ParcelTextures/SP2/M_SP2
+MRUItem15=/Game/ConveyorBelt/ParcelTextures/SP1/M_SP1
+MRUItem16=/Game/ConveyorBelt/ParcelTextures/SL2/M_SL2
+MRUItem17=/Game/ConveyorBelt/ParcelTextures/SL1/M_SL1
+MRUItem18=/Game/ConveyorBelt/ParcelTextures/LP3/M_LP3
+MRUItem19=/Game/ConveyorBelt/ParcelTextures/LP2/M_LP2
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
