--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -116,9 +116,8 @@ OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased.INT_Tex
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_GameManager.BP_GameManager
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/ThirdPerson/Widgets/TextUI.TextUI
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/HUD/ControlHUD/W_Controls.W_Controls
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/Keypad/INT_Keypad.INT_Keypad
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/Keypad/W_Keypad.W_Keypad
+OpenAssetsAtExit=/Game/ThirdPerson/Menus/W_Menu.W_Menu
+OpenAssetsAtExit=/Game/ThirdPerson/Menus/W_StartMenu.W_StartMenu
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -871,8 +870,8 @@ Keypad_Widget_C.Clipping=True
 Keypad_Widget_C.Navigation=True
 Keypad_Widget_C.Localization=True
 Button.Layout=True
-Button.Appearance=True
-Button.Interaction=False
+Button.Appearance=False
+Button.Interaction=True
 Button.Accessibility=False
 Button.Behavior=True
 Button.Render Transform=True
@@ -2250,10 +2249,10 @@ SceneCaptureComponent2D="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings
 SceneCaptureComponent="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings[0]\" "
 SceneComponent=
 ActorComponent=
-Object=
-Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget=
-Visual=
+Object="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
+Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 OBJ_Keypad_C="\"Object.Default.InteractText\" "
 INT_Keypad_C=
 INT_TextBased_C=
@@ -2263,12 +2262,12 @@ None=======
 None=======
 InputMappingContext=
 DataAsset=
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
-PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
+Button="\"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
+ContentWidget="\"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
+PanelWidget="\"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 Border="\"Object.Appearance.Background\" \"Object.Appearance.Background.TintColor\" \"Object.Appearance.Background.OutlineSettings.CornerRadii\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 Keypad_Widget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
-UserWidget=
+UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 UniformGridPanel="\"Object.Child Layout.SlotPadding\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 BP_ThirdPersonCharacter_C=
@@ -2320,7 +2319,7 @@ MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingC
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 SphereComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
-W_Inventory_C=
+W_Inventory_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 InventoryClick=
 InventoryClick_8=
 InputAction="\"Object.Action.Triggers\" "
@@ -3628,26 +3627,26 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/Interactives/Keypad/INT_Keypad
-MRUItem1=/Game/ThirdPerson/Blueprints/Interactives/Keypad/W_Keypad
-MRUItem2=/Game/ThirdPerson/ImageTextures/ItemImages/TapePile
-MRUItem3=/Game/ThirdPerson/ImageTextures/ItemImages/Stapler_
-MRUItem4=/Game/ThirdPerson/Blueprints/HUD/ControlHUD/W_Controls
-MRUItem5=/Game/ThirdPerson/Widgets/TextUI
-MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_GameManager
-MRUItem8=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
-MRUItem9=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring
-MRUItem10=/Game/ThirdPerson/Sounds/BP_SoundManager
-MRUItem11=/Game/ThirdPerson/Menus/W_Menu
-MRUItem12=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem13=/Game/ThirdPerson/3D_Models/Meshs/PHU
-MRUItem14=/Game/ConveyorBelt/W_ConveyorBelt
-MRUItem15=/Game/ConveyorBelt/IF_Conveyor
-MRUItem16=/Game/ThirdPerson/Interfaces/IF_Dialogue
-MRUItem17=/Game/ConveyorBelt/BP_ConveyorBelt
-MRUItem18=/Game/ConveyorBelt/BP_ConveyorBelt1
-MRUItem19=/Game/ConveyorBelt/ParcelTextures/SP2/M_SP2
+MRUItem0=/Game/ThirdPerson/Blueprints/Interactives/Wiring/W_Wiring
+MRUItem1=/Game/ThirdPerson/Menus/W_StartMenu
+MRUItem2=/Game/ThirdPerson/Menus/W_Menu
+MRUItem3=/Game/ThirdPerson/Menus/W_Inventory
+MRUItem4=/Game/ThirdPerson/Blueprints/Interactives/Keypad/INT_Keypad
+MRUItem5=/Game/ThirdPerson/Blueprints/Interactives/Keypad/W_Keypad
+MRUItem6=/Game/ThirdPerson/ImageTextures/ItemImages/TapePile
+MRUItem7=/Game/ThirdPerson/ImageTextures/ItemImages/Stapler_
+MRUItem8=/Game/ThirdPerson/Blueprints/HUD/ControlHUD/W_Controls
+MRUItem9=/Game/ThirdPerson/Widgets/TextUI
+MRUItem10=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem11=/Game/ThirdPerson/Blueprints/BP_GameManager
+MRUItem12=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
+MRUItem13=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring
+MRUItem14=/Game/ThirdPerson/Sounds/BP_SoundManager
+MRUItem15=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem16=/Game/ThirdPerson/3D_Models/Meshs/PHU
+MRUItem17=/Game/ConveyorBelt/W_ConveyorBelt
+MRUItem18=/Game/ConveyorBelt/IF_Conveyor
+MRUItem19=/Game/ThirdPerson/Interfaces/IF_Dialogue
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -3944,6 +3943,8 @@ None=======
 /Game/ConveyorBelt/ParcelTextures/SP2/M_SP2.M_SP2=0
 /Game/ConveyorBelt/BP_ConveyorBelt1.BP_ConveyorBelt1=1
 /Game/ThirdPerson/3D_Models/Meshs/PHU.PHU=1
+/Game/ThirdPerson/Blueprints/Interactives/Keypad/W_Keypad.W_Keypad=1
+/Game/ThirdPerson/Blueprints/HUD/ControlHUD/W_Controls.W_Controls=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
