--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -111,13 +111,7 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=False
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring.INT_Wiring
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased.INT_TextBased
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_GameManager.BP_GameManager
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/ThirdPerson/Widgets/TextUI.TextUI
-OpenAssetsAtExit=/Game/ThirdPerson/Menus/W_Menu.W_Menu
-OpenAssetsAtExit=/Game/ThirdPerson/Menus/W_StartMenu.W_StartMenu
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -214,7 +208,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/ImageTextures/ItemImages
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints/Interactives/Wiring
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1718,6 +1712,7 @@ INT_Wiring_C.Default=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 MultiLineEditableTextBox.Layout=True
 MultiLineEditableTextBox.Content=True
 MultiLineEditableTextBox.Style=True
@@ -2214,7 +2209,6 @@ W_Controls_C.Localization=True
 W_Controls_C.Accessibility=True
 W_Controls_C.Clipping=True
 W_Controls_C.Navigation=True
-Texture2D.Interchange =True
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2249,10 +2243,10 @@ SceneCaptureComponent2D="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings
 SceneCaptureComponent="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings[0]\" "
 SceneComponent=
 ActorComponent=
-Object="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
+Object=
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
-Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 OBJ_Keypad_C="\"Object.Default.InteractText\" "
 INT_Keypad_C=
 INT_TextBased_C=
@@ -2286,7 +2280,7 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 BP_GameManager_C="\"Object.Default.Cutscenes\" "
 BP_GameManager_C="\"Object.Default.ItemTable.ItemTable[0]\" \"Object.Default.ItemTable.ItemTable[0].CombineInto_10_A1E67FEF49FAC97C8E5A868F73F579FC\" \"Object.Default.ItemTable.ItemTable[1]\" \"Object.Default.ItemTable.ItemTable[1].CombinableWith_9_E7C2233748C1F1FA3AC47BAE7426FCA0\" \"Object.Default.ItemTable.ItemTable[1].CombineInto_10_A1E67FEF49FAC97C8E5A868F73F579FC\" \"Object.Default.Cutscenes.Cutscenes[0]\" \"Object.Default.CharacterList\" "
-BP_GameManager_C="\"Object.Tables.CutsceneMap\" \"Object.Tables.CutsceneMap.CutsceneMap_Value[7]\" \"Object.Tables.CutsceneMap.CutsceneMap_Value[8]\" "
+BP_GameManager_C="\"Object.Tables.CutsceneMap.CutsceneMap_Value[7]\" \"Object.Tables.CutsceneMap.CutsceneMap_Value[8]\" "
 PreviewMaterial="\"Object.Lightmass.LightmassSettings\" "
 Material="\"Object.Lightmass.LightmassSettings\" "
 MaterialInterface="\"Object.Lightmass.LightmassSettings\" "
@@ -3469,7 +3463,7 @@ K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_Variab
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.MeshList,PropertyWrapper.DefaultValueCategory.TypeList,K2Node_FunctionEntry.Inputs.5A2D76044AB73ABF2253C7BD2DF8D08C,PropertyWrapper.DefaultValueCategory.MaterialList,PropertyWrapper.DefaultValueCategory.TypeIntList,PropertyWrapper.DefaultValueCategory.FragIntList,PropertyWrapper.DefaultValueCategory.DangIntList,PropertyWrapper.DefaultValueCategory.MeshIntList,
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.MeshList,PropertyWrapper.DefaultValueCategory.TypeList,K2Node_FunctionEntry.Inputs.5A2D76044AB73ABF2253C7BD2DF8D08C,PropertyWrapper.DefaultValueCategory.MaterialList,PropertyWrapper.DefaultValueCategory.TypeIntList,PropertyWrapper.DefaultValueCategory.FragIntList,PropertyWrapper.DefaultValueCategory.DangIntList,PropertyWrapper.DefaultValueCategory.MeshIntList,
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.MeshList,PropertyWrapper.DefaultValueCategory.TypeList,K2Node_FunctionEntry.Inputs.5A2D76044AB73ABF2253C7BD2DF8D08C,PropertyWrapper.DefaultValueCategory.MaterialList,PropertyWrapper.DefaultValueCategory.TypeIntList,PropertyWrapper.DefaultValueCategory.FragIntList,PropertyWrapper.DefaultValueCategory.DangIntList,PropertyWrapper.DefaultValueCategory.MeshIntList,
-SceneComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.MeshList,PropertyWrapper.DefaultValueCategory.TypeList,K2Node_FunctionEntry.Inputs.5A2D76044AB73ABF2253C7BD2DF8D08C,PropertyWrapper.DefaultValueCategory.MaterialList,PropertyWrapper.DefaultValueCategory.TypeIntList,PropertyWrapper.DefaultValueCategory.FragIntList,PropertyWrapper.DefaultValueCategory.DangIntList,PropertyWrapper.DefaultValueCategory.MeshIntList,
+SceneComponent=
 BP_ThirdPersonGameMode_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.MeshList,PropertyWrapper.DefaultValueCategory.TypeList,K2Node_FunctionEntry.Inputs.5A2D76044AB73ABF2253C7BD2DF8D08C,PropertyWrapper.DefaultValueCategory.MaterialList,PropertyWrapper.DefaultValueCategory.TypeIntList,PropertyWrapper.DefaultValueCategory.FragIntList,PropertyWrapper.DefaultValueCategory.DangIntList,PropertyWrapper.DefaultValueCategory.MeshIntList,
 INT_TextBased_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,
 INT_TextBased_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.MeshList,PropertyWrapper.DefaultValueCategory.TypeList,K2Node_FunctionEntry.Inputs.5A2D76044AB73ABF2253C7BD2DF8D08C,PropertyWrapper.DefaultValueCategory.MaterialList,PropertyWrapper.DefaultValueCategory.TypeIntList,PropertyWrapper.DefaultValueCategory.FragIntList,PropertyWrapper.DefaultValueCategory.DangIntList,PropertyWrapper.DefaultValueCategory.MeshIntList,
@@ -3627,19 +3621,19 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/Interactives/Wiring/W_Wiring
-MRUItem1=/Game/ThirdPerson/Menus/W_StartMenu
-MRUItem2=/Game/ThirdPerson/Menus/W_Menu
-MRUItem3=/Game/ThirdPerson/Menus/W_Inventory
-MRUItem4=/Game/ThirdPerson/Blueprints/Interactives/Keypad/INT_Keypad
-MRUItem5=/Game/ThirdPerson/Blueprints/Interactives/Keypad/W_Keypad
-MRUItem6=/Game/ThirdPerson/ImageTextures/ItemImages/TapePile
-MRUItem7=/Game/ThirdPerson/ImageTextures/ItemImages/Stapler_
-MRUItem8=/Game/ThirdPerson/Blueprints/HUD/ControlHUD/W_Controls
-MRUItem9=/Game/ThirdPerson/Widgets/TextUI
-MRUItem10=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem11=/Game/ThirdPerson/Blueprints/BP_GameManager
-MRUItem12=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
+MRUItem0=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
+MRUItem1=/Game/ThirdPerson/Blueprints/Interactives/Wiring/W_Wiring
+MRUItem2=/Game/ThirdPerson/Menus/W_StartMenu
+MRUItem3=/Game/ThirdPerson/Menus/W_Menu
+MRUItem4=/Game/ThirdPerson/Menus/W_Inventory
+MRUItem5=/Game/ThirdPerson/Blueprints/Interactives/Keypad/INT_Keypad
+MRUItem6=/Game/ThirdPerson/Blueprints/Interactives/Keypad/W_Keypad
+MRUItem7=/Game/ThirdPerson/ImageTextures/ItemImages/TapePile
+MRUItem8=/Game/ThirdPerson/ImageTextures/ItemImages/Stapler_
+MRUItem9=/Game/ThirdPerson/Blueprints/HUD/ControlHUD/W_Controls
+MRUItem10=/Game/ThirdPerson/Widgets/TextUI
+MRUItem11=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem12=/Game/ThirdPerson/Blueprints/BP_GameManager
 MRUItem13=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring
 MRUItem14=/Game/ThirdPerson/Sounds/BP_SoundManager
 MRUItem15=/Engine/EditorBlueprintResources/StandardMacros
